# OS

./: Configure.sh  meson.build  meson_options.txt
OS/: meson.build
OS/HardwareAbstractionLayer/Architectures/stivale2-amd64/: Entry.c  GDT.asm  GDT.c  IDT.cpp  IDT.hpp  ISR.asm  SSE.asm  SSE.h  Shared.h  StivaleUtil.hpp  meson.build
OS/HardwareAbstractionLayer/Architectures/stivale2-amd64/ExternalHeaders/: Stivale2.h
OS/HardwareAbstractionLayer/Architectures/stivale2-amd64/HALImpl/: Allocator.cpp  Debug.cpp  Graphics.cpp
OS/HardwareAbstractionLayer/Headers/: Allocator.hpp  Debug.hpp  Graphics.hpp
OS/Kernel/: GenerateImage.shell  Kernel.cpp  Kernel.hpp  VitreusCorConfig.h.in  limine.cfg  meson.build
